# ufocompression

./: CMakeLists.txt  README.md
1stparty/: CMakeLists.txt
cmake/: ufocompressionConfig.cmake.in
docs/: CMakeLists.txt
include/ufo/compression/: algorithm.hpp  compression.hpp  compressor.hpp  lz4.hpp  lzf.hpp  none.hpp  zlib.hpp  zstd.hpp
src/ufo/compression/: lz4.cpp  lzf.cpp  none.cpp  zlib.cpp  zstd.cpp
tests/: CMakeLists.txt  compression_test.cpp  lz4_test.cpp
